# name_matching

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.txt  setup.py
.github/workflows/: publish.yaml  python-app.yml
distances/: __init__.py  _bag.py  _baulieu_xiii.py  _character.py  _clement.py  _cormode_lz.py  _damerau_levenshtein.py  _dice_asymmetric_i.py  _discounted_levenshtein.py  _distance.py  _double_metaphone.py  _editex.py  _fuzzywuzzy_partial_string.py  _fuzzywuzzy_token_set.py  _fuzzywuzzy_token_sort.py  _hamming.py  _indel.py  _iterative_substring.py  _jaro_winkler.py  _kuhns_iii.py  _lcprefix.py  _lcsseq.py  _levenshtein.py  _lig3.py  _ncd_bz2.py  _overlap.py  _pearson_chi_squared.py  _pearson_ii.py  _phonetic.py  _phonetic_distance.py  _q_grams.py  _q_skipgrams.py  _ratcliff_obershelp.py  _refined_soundex.py  _regexp.py  _rouge_l.py  _ssk.py  _tichy.py  _token_distance.py  _tokenizer.py  (+4 more)
docs/: conf.py  docs.html  index.rst
docs/source/: conf.py  name_matching.rst  requirements.txt
docs/source/_build/doctrees/: distances.doctree  environment.pickle  index.doctree  (+1 more)
name_matching/: check_results.py  distance_metrics.py  match_annotator.py  name_matcher.py  name_matching_optimiser.py  run_nm.py  sparse_cosine.py  term_data.py
name_matching/data/: common_words.csv  legal_names.csv  transliterations.py
name_matching/test/: conftest.py  test_distance_metrics.py  test_match_annotator.py  test_name_matcher.py  test_name_matcher_optimiser.py  test_run_nm.py  test_sparse_cosine.py
notebook/: name_matching extended.ipynb  name_matching parallel.ipynb  name_matching.ipynb  name_matching_optimised.ipynb
test/: adjusted_test_names.csv  test_names.csv
(+11 files in other folders)
